# ibpp

./: .gitignore  CMakeLists.txt  changelog.txt  howtobuild.txt  license.txt  releasenotes.txt  todo.txt
core/: Makefile  _dpb.cpp  _epb.cpp  _ibpp.cpp  _ibpp.h  _ibs.cpp  _internals.h  _msvcwarnings.h  _rb.cpp  _spb.cpp  _tpb.cpp  all_at_once.cpp  all_in_one.cpp  array.cpp  blob.cpp  changelog.txt  database.cpp  date.cpp  dbkey.cpp  driver.cpp  events.cpp  exception.cpp  howtobuild.txt  ibase.h  iberror.h  ibpp.cpp  ibpp.h  license.txt  readme.txt  row.cpp  service.cpp  statement.cpp  time.cpp  tipcopy.cmd  todonotes.txt  transaction.cpp  user.cpp  value.cpp
packaging/: buildzip.cmd
tests/: Makefile  tests.cpp
tests/bcb6/: simplest-build.bat  tests.bpr
tests/unixes/: Makefile  simplest-build.sh
tests/unixlike/: Makefile
tests/vs2005/: simplest-build.bat  tests.vcproj
tests/vs2008/: tests.sln  tests.vcproj
tests/vs2010/: tests.sln  tests.vcxproj  tests.vcxproj.filters
tests/vs2013/: tests.sln  tests.vcxproj  tests.vcxproj.filters
tests/vs6/: _not_maintained_anymore.txt  tests.dsp  tests.dsw
